--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-webpcss": "^1.1.1",
-    "sass": "^1.45.2"
+    "sass": "^1.45.2",
+    "svg-path-generator": "^1.1.0"
   },
   "devDependencies": {
     "browser-sync": "^2.27.7",
